welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if (a < 0){
    ^